[package]
name = "hcsr04"
version = "0.1.3"
authors = ["aittkx <aittkx@qq.com>"]
description = "A platform-agnostic, `no_std` driver for the HC-SR04 ultrasonic distance sensor"
repository = "https://github.com/aittkx/embedded-drivers"
documentation = "https://docs.rs/hcsr04"
readme = "README.md"
keywords = ["hc-sr04", "ultrasonic", "sensor", "driver", "embedded-hal-driver"]
edition.workspace = true
license.workspace = true
categories.workspace = true
include.workspace = true

[dependencies]
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"

bon = { version = "3.7.0", default-features = false }
defmt = { version = "1.0.1", optional = true }

[features]
default = []
defmt = ["dep:defmt"]

[dev-dependencies]
